Made the tests more Windows-friendly